--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Vlad Ivanov <vlad-mbx@ya.ru>",
   "license": "MIT",
   "dependencies": {
-    "yargs": "~4.3.2"
+    "yargs": "~4.3.2",
+    "swig": "~1.4.2",
+    "mkdirp": "~0.5.1"
   }
 }
